# trivium

./: Makefile  README.md  pyproject.toml  zensical.toml
.github/workflows/: publish.yml
docs/: environments.md  index.md  installation.md  reference.md  usage.md
docs/.overrides/: main.html
docs/stylesheets/: site.css
src/skill_trivium/: __init__.py  __main__.py  add.py  cli.py  context.py  environment.py  git.py  lockfile.py  models.py  mutation.py  remove.py  skills.py  ui.py  update.py  update_test.py
src/trivium/: __init__.py  __main__.py  cli.py  context.py  git.py  lockfile.py  models.py  skills.py  ui.py
tests/: smoke_test.py  test_add_workflow.py  test_cli.py  test_environment.py  test_git.py  test_lockfile.py  test_mutation.py  test_remove.py  test_skills.py  test_update.py  test_update_workflow.py
