[project]
name = "trivium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pesto", email = "pesto@sardella.cloud" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = [
    "E",   # pycodestyle - basic PEP8 style checks: formatting / style
    "F",   # pyflakes - errors, unused vars/imports
    "I",   # isort - Order of imports: standard -> third party -> local
    "B",   # bugbear - common logic bugs
    "UP",  # pyupgrade for modern syntax
    "N",   # PEP8 naming conventions
    "C4",  # flake8 comprehensions
    "C90", # complexity check
]

ignore = ["E501", "E203", "B008"]

[tool.ruff.lint.mccabe]
max-complexity = 40

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.uv]
add-bounds = "major"
