[build-system]
requires = ["uv_build>=0.10.7,<0.12.0"]
build-backend = "uv_build"

[project]
name = "skill-trivium"
version = "0.2.4"
description = "A minimal CLI for managing AI agent skills"
readme = "README.md"
authors = [
    { name = "pesto", email = "pesto@sardella.cloud" }
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3,<7.0.0",
    "questionary>=2.1.1,<3.0.0",
    "rich>=14.3.4,<15.0.0",
    "tomli-w>=1.2.0,<2.0.0",
    "typer>=0.24.1,<0.25.0",
]

[project.urls]
Homepage = "https://github.com/AlapinEnjoyer/trivium"
Repository = "https://github.com/AlapinEnjoyer/trivium"
Issues = "https://github.com/AlapinEnjoyer/trivium/issues"

[project.scripts]
trv = "skill_trivium.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1,<10.0.0",
    "zensical>=0.0.51,<0.0.52",
]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = [
    "E",     # pycodestyle - basic PEP8 style checks: formatting / style
    "F",     # pyflakes - errors, unused vars/imports
    "I",     # isort - Order of imports: standard -> third party -> local
    "B",     # bugbear - common logic bugs
    "UP",    # pyupgrade for modern syntax
    "N",     # PEP8 naming conventions
    "C4",    # flake8 comprehensions
    "C90",   # complexity check
    "D",     # pydocstyle - docstring enforcement
    "TID",   # flake8-tidy-imports
    "ANN",   # flake8-annotations
    "PTH",   # flake8-use-pathlib
    "ASYNC", # flake8-async
]

ignore = ["E501", "E203", "B008", "ANN401", "ANN002", "ANN003", "D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 40

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.uv]
add-bounds = "major"
